[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

name = "nnscaler"
description = "Parallelize DNN Training via A Systematic Way"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "nnScaler Team", email = "nnscaler@service.microsoft.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
nnscaler-train = "nnscaler.cli.train:main"

[project.urls]
Homepage = "https://github.com/microsoft/nnscaler"

[tool.setuptools]
dynamic.version.attr = "nnscaler.version.__version__"
dynamic.dependencies.file = "requirements.txt"

# NOTE:
# the following part only affects wheel, not sdist
# since we are using cppimport, sdist is not needed
packages.find.include = ["nnscaler*"]
package-data = { nnscaler = ["resources/**", "autodist/*.h", "autodist/*.cpp"] }
