[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6", "pybind11[global]"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

name = "nnscaler"
description = "Parallelize DNN Training via A Systematic Way"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "nnScaler Team", email = "nnscaler@service.microsoft.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
nnscaler-train = "nnscaler.cli.train:main"

[project.urls]
Homepage = "https://github.com/microsoft/nnscaler"

[tool.setuptools]
dynamic.version.attr = "nnscaler.version.__version__"
dynamic.dependencies.file = "requirements.txt"

# NOTE:
# the following part only affects wheel, not sdist
# C++ extensions are now built via setup.py instead of cppimport
packages.find.include = ["nnscaler*"]
package-data = { nnscaler = ["resources/**", "autodist/*.h", "autodist/*.cpp"] }

[tool.coverage.run]
omit = [
    "nnscaler/algorithm/ops/conv.py",
    "nnscaler/graph/function/conv.py",
    "nnscaler/graph/tracer/_pytree.py"
]
